--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ h4 {
   font-family: "Work Sans", sans-serif;
 }
 
+h2: first-letter {
+  text-transform: capitalize;
+}
+
 h3,
 h4 {
   text-align: left;
@@ -49,12 +53,6 @@ p {
 
 .btn-outline-warning:hover {
   color: #fca311;
-}
-
-.next {
-  font-weight: 600;
-  color: #adb5bd;
-  font-size: 15pt;
 }
 
 .day {
