--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+body {
+  background-color: #EFF2F1;
+}
+
+.wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.card {
+  border-color: #EFF2F1;
+  padding: 10px;
+}
+
 .i-search {
   font-size: 10pt;
 }
@@ -14,7 +29,6 @@ h2: first-letter {
   text-transform: capitalize;
 }
 
-h3,
 h4 {
   text-align: left;
   color: #adb5bd;
@@ -45,6 +59,17 @@ h5 {
 
 p {
   font-family: "Work Sans", sans-serif;
+padding: 0;
+margin-top:0;}
+
+.note {
+  color:gray;
+  margin: 10px;
+}
+
+.note a {
+  color:#88CFF8;
+  text-decoration: none;
 }
 
 .btn-outline-warning {
