--- a/style.css
+++ b/style.css
@@ -49,6 +49,17 @@ h4 {
 h5 {
   font-weight: 300;
   font-size: 15pt;
+  color: #88CFF8;
+}
+
+.active {
+  color: #000);
+  cursor: default;
+}
+
+.active:hover {
+  text-decoration: none;
+  color:#88CFF8;
 }
 
 .i-icons {
@@ -59,7 +70,7 @@ h5 {
 
 p {
   font-family: "Work Sans", sans-serif;
-padding: 0;
+padding-top: 0;
 margin-top:0;}
 
 .note {
@@ -68,7 +79,7 @@ margin-top:0;}
 }
 
 .note a {
-  color:#88CFF8;
+  color: #fca311;
   text-decoration: none;
 }
 
