--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h4 {
   font-family: "Work Sans", sans-serif;
 }
 
-h2: first-letter {
+h2:first-letter {
   text-transform: capitalize;
 }
 
@@ -81,6 +81,25 @@ margin-top:0;}
 .note a {
   color: #fca311;
   text-decoration: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  font-family: "Work Sans", sans-serif;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: rgb(135, 135, 135);
+  font-size: 15pt;
+  font-weight: 300;
+}
+
+li:first-letter {
+  text-transform: capitalize;
 }
 
 .btn-outline-warning {
