--- a/style.css
+++ b/style.css
@@ -73,6 +73,15 @@ p {
 padding-top: 0;
 margin-top:0;}
 
+p.temp-links a {
+  font-size: 15pt;
+  padding-left: 5px;
+  color: gray;
+  text-decoration: none;
+  cursor: default;
+  font-weight: 300;
+}
+
 .note {
   color:gray;
   margin: 10px;
