--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ margin-top:0;}
 p.temp-links a {
   font-size: 15pt;
   padding-left: 5px;
-  color: gray;
+  padding-top: 0;
+  color: #000;
   text-decoration: none;
   cursor: default;
   font-weight: 300;
