--- a/style.css
+++ b/style.css
@@ -34,10 +34,19 @@ h4 {
   color: #adb5bd;
 }
 
-h1,
-h3 {
+h1 {
   font-weight: 600;
   font-size: 25pt;
+}
+
+h3 {
+  font-weight: 300;
+  font-size: 25pt;
+  color:#88CFF8;
+}
+
+.temperature-celsius {
+  font-weight: 500;
 }
 
 h2,
@@ -52,17 +61,6 @@ h5 {
   color: #88CFF8;
 }
 
-.active {
-  color: #000);
-  cursor: default;
-  font-weight: bold;
-}
-
-.active:hover {
-  text-decoration: none;
-  color:#88CFF8;
-}
-
 .i-icons {
   color: #fca311;
   font-size: 40pt;
@@ -74,13 +72,9 @@ p {
 padding-top: 0;
 margin-top:0;}
 
-p.temp-links a {
-  font-size: 15pt;
-  padding-left: 5px;
-  padding-top: 0;
+p.temp-links {
+  font-size: 25pt;
   color: #000;
-  text-decoration: none;
-  cursor: default;
   font-weight: 300;
 }
 
