--- a/style.css
+++ b/style.css
@@ -125,20 +125,22 @@ li:first-letter {
 }
 
 .weather-forecast {
+  font-family: "Work Sans", sans-serif;
   margin-top: 20px;
   text-align: center;
   color: #000;
 }
 
 .weather-forecast-date {
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 500;
   color:#88CFF8;
 }
 
 .weather-forecast-temperature-min {
-  opacity: 0.5;
+  color: #adb5bd;
 }
 
 .weather-forecast-temperatures {
-  font-size: 13px;
+  font-size: 15px;
 }
